tests/baselines/reference/stringLiteralsWithEqualityChecks03.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks03.ts(13,5): error TS2365: Operator '===' cannot be applied to types 'string' and '"foo" | Refrigerator'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks03.ts(16,5): error TS2365: Operator '===' cannot be applied to types '"foo"' and '"bar"'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks03.ts(18,5): error TS2365: Operator '!==' cannot be applied to types 'string' and '"foo" | Refrigerator'.
tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks03.ts(21,5): error TS2365: Operator '!==' cannot be applied to types '"foo"' and '"bar"'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralsWithEqualityChecks03.ts (4 errors) ====
    interface Runnable {
        isRunning: boolean;
    }
    
    interface Refrigerator extends Runnable {
        makesFoodGoBrrr: boolean;
    }
    
    let x: string;
    let y: "foo" | Refrigerator;
    
    let b: boolean;
    b = x === y;
        ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'string' and '"foo" | Refrigerator'.
    b = "foo" === y
    b = y === "foo";
    b = "foo" === "bar";
        ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '"foo"' and '"bar"'.
    
    b = x !== y;
        ~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'string' and '"foo" | Refrigerator'.
    b = "foo" !== y
    b = y !== "foo";
    b = "foo" !== "bar";
        ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types '"foo"' and '"bar"'.
    
    